# football-player-tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml  train.yml
configs/: config.yaml
configs/data/: football.yaml
configs/model/: yolov11n.yaml  yolov11s.yaml
configs/tracking/: botsort.yaml
configs/training/: default.yaml
configs/tuning/: optuna.yaml
docker/: Dockerfile  Dockerfile.gpu
docs/: architecture.md  gcp_setup.md  handoff.md
notebooks/: 01_eda.ipynb  colab_hpo.ipynb  colab_train.ipynb  mlflow_quickstart.ipynb
scripts/: download_dataset.py
src/football_tracker/: __init__.py  cli.py
src/football_tracker/api/: __init__.py  main.py  streamlit_app.py
src/football_tracker/data/: __init__.py  dataset.py
src/football_tracker/inference/: __init__.py  predictor.py
src/football_tracker/models/: __init__.py  loader.py
src/football_tracker/tracking/: __init__.py  tracker.py
src/football_tracker/training/: __init__.py  callbacks.py  train.py  tune.py  utils.py
src/football_tracker/utils/: __init__.py  logging.py
tests/: conftest.py  test_api.py  test_smoke.py
