[tool.poetry]
name = "football-player-tracker"
version = "0.1.0"
description = "End-to-end Computer Vision + MLOps system for football player detection and tracking."
authors = ["Jesús Manuel Vázquez Nicolás <jmvazqueznicolas@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "football_tracker", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# Core ML / CV
torch = "^2.4.0"
torchvision = "^0.19.0"
ultralytics = "^8.3.0"
opencv-python-headless = "^4.10.0"
numpy = "^1.26.0"
pillow = "^10.4.0"
albumentations = "^1.4.0"
onnx = "^1.16.0"
onnxruntime = "^1.18.0"

# MLOps
# NOTE: pinned to 3.x because 2.22.x has a known SIGSEGV crash on macOS arm64
# (gunicorn workers segfault on boot). 3.x ships with the fix.
mlflow = "^3.12.0"
wandb = "^0.18.0"
dvc = {extras = ["gs"], version = "^3.55.0"}
optuna = "^4.0.0"
hydra-core = "^1.3.0"

# Analysis
fiftyone = "^1.0.0"
pandas = "^2.2.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.0"

# Dataset source
roboflow = "^1.1.50"

# Serving
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-multipart = "^0.0.10"
streamlit = "^1.38.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"

# Monitoring
evidently = "^0.4.30"

# Cloud
google-cloud-storage = "^2.18.0"

# Utilities
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
typer = "^0.12.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.6.0"
black = "^24.8.0"
mypy = "^1.11.0"
pre-commit = "^3.8.0"
ipykernel = "^6.29.0"
jupyter = "^1.1.0"
nbqa = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
football-tracker = "football_tracker.cli:app"

# -------------------- Tool configuration --------------------

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "data", "models", "mlruns", "wandb"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
]
ignore = ["E501"]  # handled by black

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow asserts in tests
"__init__.py" = ["F401"]    # allow unused imports

[tool.ruff.lint.flake8-bugbear]
# Typer / FastAPI use function calls in defaults intentionally (Option, Argument,
# Depends). These return immutable metadata objects, not mutable state. Telling
# ruff to whitelist them avoids false positives on B008.
extend-immutable-calls = [
    "typer.Option",
    "typer.Argument",
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.File",
    "fastapi.Form",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["notebooks", "data", "models", "mlruns", "wandb"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=football_tracker --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a GPU",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src/football_tracker"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
